@@ -64,8 +64,9 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © 2015-2016 Michal Josef Špaček
-     BSD 2-Clause License
+    © 2015-2016 Michal Josef Špaček
+
+    BSD 2-Clause License
 
 VERSION
     0.03
